# scheduling_agent

./: .gitignore  README.md  main.py  pyproject.toml
data/: sample_schedule.xlsx  test_sample.xlsx  test_tools.xlsx
data/baseline/: current_baseline.json
src/schedule_agent/: agent_runner.py  agent_tools.py  app.py  baseline_store.py  calendar_service.py  conflict_checker.py  excel_parser.py  export_service.py  feasibility_service.py  models.py  project_context.py  result_formatter.py  sample_generator.py  schedule_engine.py  sqlite_store.py  validation.py
tests/: test_agent_runner.py  test_agent_tools.py  test_baseline_store.py  test_excel_parser.py  test_feasibility_service.py  test_schedule_engine.py  test_sqlite_store.py
