[project]
name = "schedule-agent"
version = "0.1.0"
description = "Schedule Assistant Agent - A local web-based scheduling tool"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "streamlit",
    "pandas",
    "openpyxl",
    "pydantic",
    "python-dotenv",
    "langchain",
    "langchain-openai",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
